--- a/_config.yml
+++ b/_config.yml
@@ -100,11 +100,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Monkey Thunder"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
-  email            :
+  bio              : "Quantum Physics + Programming beginner"
+  location         : "Earth"
+  email            : "lab.monkeythunder@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
