--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 author:
   name             : "Monkey Thunder"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Quantum Physics + Programming beginner"
+  bio              : "Quantum Physics + Programming Beginner"
   location         : "Earth"
   email            : "lab.monkeythunder@gmail.com"
   links:
